components/ua/user-exchange-publisher/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-exchange-publisher
spec:
  revisionHistoryLimit: 3 
  selector:
    matchLabels:
      app: user-exchange-publisher      
  replicas: 1
  template:
    metadata:
      labels:
        app: user-exchange-publisher       
    spec:
      containers:
        - name: user-exchange-publisher
          ports:
            - containerPort: 8080            
          volumeMounts:
            - name: data
              mountPath: "/data"                       
          securityContext:
            runAsUser: 773
            runAsGroup: 773
                      
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: user-exchange-publisher-data-pvc
        - name: script
          configMap:
            name: setup-h2-permissions
            defaultMode: 0755    # makes script executable
