components/ua/user-exchange-publisher/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-exchange-publisher
spec:
  revisionHistoryLimit: 3 
  selector:
    matchLabels:
      app: user-exchange-publisher      
  replicas: 1
  template:
    metadata:
      labels:
        app: user-exchange-publisher       
    spec:
      containers:
        - name: user-exchange-publisher
          image: ghcr.io/isisbusapps/user-exchange-publisher@sha256:ff81d9a8f1e819abec7e6adf9df95361a935c9670de4aab53a3d72a4839a168e
          ports:
            - containerPort: 8080            
          volumeMounts:
            - name: data
              mountPath: "/data"                       
          securityContext:
            runAsUser: 773
            runAsGroup: 773
                      
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: user-exchange-publisher-data-pvc
        - name: script
          configMap:
            name: setup-h2-permissions
            defaultMode: 0755    # makes script executable
