components/ua/user-exchange-publisher/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-exchange-publisher
spec:
  selector:
    app: user-exchange-publisher    
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
