components/ua/user-exchange-publisher/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-exchange-publisher
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "*.developers.facilities.rl.ac.uk"
    secretName: developers-tls-certificate
  - hosts:
      - "*.facilities.rl.ac.uk"
    secretName: facilities-tls-certificate
  rules:
  - host: "*.developers.facilities.rl.ac.uk"
    http: &http_rules
      paths:
        - path: /publish/merge(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-exchange-publisher
              port:
                number: 8080
  - host: "*.facilities.rl.ac.uk"
    http: *http_rules
